Add try/catch clause to help tracking JS error when parsing logs.
The error itself is difficult to reproduce and not solved.

--- a/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
@@ -127,7 +127,12 @@
                 var title = $('#btn_title_' + $(this).data('content')).text();
 
                 var content = $('#btn_content_' + $(this).data('content'));
-                var lines = JSON.parse(content.text());
+                try{
+                  var lines = JSON.parse(content.text());
+                } catch (err) {
+                  console.error("Trying to parse \n" + content.text() + "\n\n");
+                  console.error("but failed with " + err + "\n");
+                }
 
 
                 var sanitizedLines = lines.map(function(line){ return escapeHTML(line) });
