Add the "report issue" button. Break the "dump" button.
(I kept the dump button so it can be modified it later).

--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -106,6 +106,12 @@
 <% end %>
 <!-- End Create agent display ==================================================-->
 
+<!-- Report issue button -->
+<div>
+  <div class="pull-right">
+    <a class="btn btn-mini" href="/report_issue">Report issue</a>
+  <div>
+</div>
 
 <!-- Scripts ===================================================================-->
 <% if @action_popup != 0 || @error_popup_msg != ""%>
