Rename report issue button.

--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -109,7 +109,7 @@
 <!-- Report issue button -->
 <div>
   <div class="pull-right">
-    <a class="btn btn-mini" href="/report_issue">Report issue</a>
+    <a class="btn btn-mini" href="/report_issue">Dump vm ruby state to report an issue</a>
   <div>
 </div>
 
