--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -57,7 +57,7 @@
 </div>
 <% end %>
 <% if flash[:notice] %>
-    <div class="alert alert-info">
+    <div class="row alert alert-info">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
       <%=flash[:notice]%>
     </div>
