Correctly escape log contents so they can be JSON-parsed back.

--- a/web_shell/local_cloud_config/views/gen_log_buttons.erb
+++ b/web_shell/local_cloud_config/views/gen_log_buttons.erb
@@ -73,7 +73,7 @@
 
     <textarea id="btn_content_<%= index %>" style="display:none">
       <% if punk.content.size > 0 %>
-        <%= punk.content %>
+        <%= punk.content.map {|line| line.to_json} %>
       <% else %>
         ["No details available"]
       <% end %>
