Improve crash logs escaping.

--- a/web_shell/local_cloud_config/views/gen_log_buttons.erb
+++ b/web_shell/local_cloud_config/views/gen_log_buttons.erb
@@ -100,7 +100,7 @@
   </div>
 
   <textarea id="btn_content_crash" style="display:none">
-    <%= logs_server %>
+    <%= logs_server.to_json %>
   </textarea>
 <% end %>
 
