--- a/web_shell/local_cloud/ragent_bay/exts/protogen/protocol_generator/lib/plugins/mdi_sdk_vm_server_ruby/templates/main.rb.erb
+++ b/web_shell/local_cloud/ragent_bay/exts/protogen/protocol_generator/lib/plugins/mdi_sdk_vm_server_ruby/templates/main.rb.erb
@@ -8,7 +8,7 @@ module Protogen_<%= protocol_set.config.get(:ruby, :agent_name) %>
     # @param id used to namespace the keys
     # @return a Redis database.
     def self.redis(id = "")
-      Sdk_api_<%= protocol_set.config.get(:ruby, :agent_name) %>::SDK::API.redis_internal(id)
+      get_current_user_api.mdi.storage.redis(id)
     end
 
     # Reply to a message
@@ -19,12 +19,12 @@ module Protogen_<%= protocol_set.config.get(:ruby, :agent_name) %>
       else
         cookies = nil
       end
-      Sdk_api_<%= protocol_set.config.get(:ruby, :agent_name) %>::SDK::API.device_gate.reply(parent_msg, answer, cookies)
+      get_current_user_api.mdi.dialog.device_gate.reply(parent_msg, answer, cookies)
     end
 
     # Push a message to a device
     def self.push_to_device(asset, account, message)
-     Sdk_api_<%= protocol_set.config.get(:ruby, :agent_name) %>::SDK.API.device_gate.push(asset, account, message)
+     get_current_user_api.mdi.dialog.device_gate.push(asset, account, message)
     end
 
   end
@@ -33,7 +33,7 @@ module Protogen_<%= protocol_set.config.get(:ruby, :agent_name) %>
   module ProtogenAPIs
 
     # Encodes a protogen message object into a string
-    # @param [CCS::Message] message contains all information related to the
+    # @param [MessageClass] message contains all information related to the
     #   message. message.content must contain a Protogen::Message object.
     # @raise [Protogen::UnknownMessageType] if message.content is not a protogen
     #   message object.
@@ -45,7 +45,7 @@ module Protogen_<%= protocol_set.config.get(:ruby, :agent_name) %>
     end
 
     # Decodes a protogen encoded string, and cast it in the appropriate object
-    # @param [CCS::Message] message contains all information related to the
+    # @param [MessageClass] message contains all information related to the
     #   message (meta + payloads, protogen encoded string is in message.content)
     # @param [Fixnum] id ID of the decoder to use. Different decoders do not share message parts,
     #   so you must send all parts of a message to the same decoder (ID),
@@ -60,7 +60,7 @@ module Protogen_<%= protocol_set.config.get(:ruby, :agent_name) %>
     end
 
     # Check the message protogen type, and call the defined callback accordingly.
-    # @param [CCS::Message] message message.content must be a protogen message object.
+    # @param [MessageClass] message message.content must be a protogen message object.
     def self.process(message)
       if message.content.class == Protogen::MessagePartNotice
         CC.logger.info("Message part received")
