Add a tiny alert to say people tests are not 100% up.

--- a/web_shell/local_cloud_config/views/tests.erb
+++ b/web_shell/local_cloud_config/views/tests.erb
@@ -3,6 +3,11 @@
   Mobile Devices 2013
 -->
 
+
+<div class="alert">
+  This feature may not fully works for now, work in progress
+</div>
+
 <div>
 
   <div id="info">
